# ponens

./: .gitignore  AGENT_PROMPT.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW_AGENT_PROMPT.md
.githooks/: pre-commit
cli/: Makefile  README.md  pyproject.toml
cli/ponens/: agent.py  cli.py  client.py  demos.py  emit.py  formatting.py  goals.py  langfuse.py  otel.py  policy_compiler.py  reasoners.py  registry.py  sync.py  trace.py
cli/ponens/adapters/: __init__.py  claude_code.py  codex.py  cursor.py  gemini.py  pi.py
cli/tests/: conftest.py  test_e2e.py
cli/tests/fixtures/: stripe-demo-trace.json
cli/tests/unit/: conftest.py  test_agent.py  test_apply_formal_methods.py  test_build_index.py  test_check_faithfulness.py  test_curate.py  test_cursor_adapter.py  test_demos.py  test_emit.py  test_goal_cmds.py  test_goals.py  test_grade.py  test_langfuse.py  test_live_goal_resolution.py  test_otel.py  test_reasoners.py  test_registry_adapter.py  test_registry_cache.py  test_registry_io.py  test_registry_sources.py  test_report.py  test_reproduce.py  test_residual_policies.py  test_residual_quantifiers.py  test_review_ready.py  test_stripe_demo.py  test_sync.py  test_temporal_policies.py  test_temporal_until_since.py  test_trace_residuals.py  test_validate.py  test_validate_soundness.py  test_viewer.py  test_yaml.py
examples/: README.md  api_pagination_v1_1.json  make_samples.py  manifest.json  sample_auth_xstate.json  sample_etl_refactor.json  sample_payment_idempotency.json  stripe_v1_1.json
parity/: README.md  cases.json  check_faithfulness_parity.py  check_parity.py  faithfulness_cases.json  (+2 more)
(+385 files in other folders)
