[project]
name = "ponens"
version = "1.0.0"
description = "Author, govern, and validate reasoning traces — the open CLI for the reasoning-policies ecosystem"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Denis Ignatovich", email = "denis@aestheticintegration.com"},
]

[project.optional-dependencies]
yaml = ["pyyaml>=6"]

[project.scripts]
ponens = "ponens.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ponens*"]
