[project]
name = "ponens"
version = "1.4.0"
description = "Author, govern, and validate reasoning traces — the open CLI for the reasoning-policies ecosystem"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "Denis Ignatovich", email = "denis@imandra.ai"},
]

[project.optional-dependencies]
yaml = ["pyyaml>=6"]

[project.scripts]
ponens = "ponens.cli:main"

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ponens*"]

[tool.setuptools.package-data]
ponens = ["visualizer.html", "demos/*.json"]
